# media-terminal-adapter-agent

./: .gitmodules  .gitreview  CHANGELOG.md  ChangeLog  Makefile.am  NOTICE  README.md  configure.ac
.github/: CODEOWNERS
.github/workflows/: native-build.yml
config/: CcspMta.cfg  CcspMtaAgent.xml  CcspMtaLib.cfg
cov_docker_script/: component_config.json  configure_options.conf
scripts/: mta_overcurrentfault_status.sh
source/: Makefile.am
source/Custom/: mta_custom.h
source/MtaAgentSsp/: Makefile.am  TR104.c  TR104.h  TR104_webconfig.c  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/: Makefile.am
source/TR-181/include/: cosa_x_cisco_com_mta_apis.h
source/TR-181/integration_src.shared/: Makefile.am  cosa_x_cisco_com_mta_apis.c
source/TR-181/middle_layer_src/: Makefile.am  cosa_apis.h  cosa_dml_api_common.h  cosa_rbus_apis.c  cosa_rbus_apis.h  cosa_voice_apis.c  cosa_voice_apis.h  cosa_x_cisco_com_mta_dml.c  cosa_x_cisco_com_mta_dml.h  cosa_x_cisco_com_mta_internal.c  cosa_x_cisco_com_mta_internal.h  plugin_main.c  plugin_main_apis.c  plugin_main_apis.h
source/test/: Makefile.am  TR104_test.cpp  TR104_webconfig_test.cpp  cosa_x_cisco_com_mta_apis_test.cpp  cosa_x_cisco_com_mta_dml_test.cpp  cosa_x_cisco_com_mta_internal_test.cpp  gtest_main.cpp  mta_mock.cpp  mta_mock.h  plugin_main_apis_test.cpp  run_ut.sh
